# rustrestapi

./: Cargo.toml  conn.session.sql
migrations/2022-10-24-091051_create_users/: up.sql
migrations/2022-10-24-144854_create_table/: down.sql  up.sql
src/: build.rs  main.rs
src/database/: connection.rs
src/models/: country.rs  mod.rs  models.rs  task.rs  users.rs
src/schema/: schema.rs
src/services/: country.rs  mod.rs  task.rs  user.rs
