[package]
name = "restapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
diesel = { version = "1.4.4", features = ["mysql", "postgres"] }
diesel_migrations = {version = "2.0.0", features = ["mysql"]}
dotenv = "0.9.0"
tokio = {version = "1.21.2", features =["full"]}
serde = { version = "1.0.126", features = ["derive"] }



